# rssh

./: README.md
debian/: NEWS  README.Debian  changelog  clean  control  copyright  docs  examples  install  manpages  postinst  rules  templates  watch
debian/patches/: 0001-Fix-invalid-option-error.patch  0002-Honor-CFLAGS-CPPFLAGS-passed-to-configure.patch  0003-Fix-buffer-allocation-buffer-for-fail-message.patch  0004-Lower-syslog-priority-to-debug.patch  0005-Fix-spelling-errors-in-manual-pages.patch  0006-Fixes-and-improvements-to-mkchroot.sh.patch  0008-Add-support-for-Subversion-svnserve.patch  0009-Verify-scp-command-options.patch  series
debian/po/: cs.po  da.po  de.po  es.po  fr.po  gl.po  id.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  templates.pot
rssh-2.3.4/: AUTHORS  CHROOT  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  SECURITY  argvec.c  argvec.h  conf_convert.sh  config.h.in  configure  configure.ac  log.c  log.h  main.c.in  mkchroot.sh  pathnames.h.in  rssh.1  rssh.conf.5  rssh.conf.5.in  rssh.h  rssh.spec  rssh.spec.in  rssh_chroot_helper.c  rsshconf.c  rsshconf.h  util.c  util.h
